@@ -1,3 +1,12 @@
+Sectember 6, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * plugins/dfsound/spu.c: Fixed frequency modulation emulation. Handle IRQs
+   in the decoded sound buffer areas. (sync'ed from the P.E.Op.S SPU 1.09)
+ * plugins/dfsound/dma.c: Likewise.
+ * plugins/dfsound/registers.c: Likewise.
+ * plugins/dfsound/xa.c: Likewise.
+ * plugins/dfsound/externals.h: Likewise.
+
 September 5, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * libpcsxcore/cdriso.c: Don't feed CDDA data to the SPU plugin when CDDA
